day2/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
spec:
  replicas: 10
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
        - name: k8s-demo
          image: arjunachari12/k8s-demo
          ports:
            - name: nodejs-port
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  ports:
  - port: 31001
    nodePort: 31002
    targetPort: nodejs-port
    protocol: TCP
  selector:
    app: helloworld
  type: NodePort
